# otus

.github/workflows/: workflow_hw2.yml  workflow_hw3.yml  workflow_test_hw1.yml
hw1/: CMakeLists.txt  main.cpp  test_version.cpp  version.h.in
hw2/: CMakeLists.txt  ip_filter.cpp
hw3/: CMakeLists.txt  ForwardList.h  MyAllocator.h  main.cpp
